# crux

./: README.md
summary_bot/: README.md  pyproject.toml
summary_bot/src/: bot.py  exceptions.py  messages.py  summarize.py
