[tool.poetry]
name = "summary-bot"
version = "0.1.0"
description = ""
authors = ["Adithyadev R <45178461+poisonpwn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
transformers = {extras = ["torch"], version = "^4.34.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
